[package]
name = "uedit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
unreal_asset = { git = "https://github.com/astrotechies/unrealmodding", rev = "84e60cc" }
